added stuff from discussion
Signed-off-by: Timo Engelhardt <Timo.Engelhardt@googlemail.com>

--- a/report_template.tex
+++ b/report_template.tex
@@ -23,6 +23,7 @@
 \tableofcontents
 \include{content/text}
 \include{content/delight}
+\include{content/customerAcquisition}
 \bibliographystyle{IEEEtran}
 %\bibliographystyle{alpha}
 \bibliography{content/bib}
