final customer acquisition
Signed-off-by: Timo Engelhardt <Timo.Engelhardt@googlemail.com>

--- a/content/bib.bib
+++ b/content/bib.bib
@@ -5,3 +5,20 @@ isbn = {9789197956994},
 pages = {132},
 title = {{Gear Up your best Business idea ever}}
 }
+@misc{Charity,
+file = {:Users/timo/Documents/Mendeley Desktop/Unknown/Unknown/Unknown. Unknown. Charity Navigator Rating - ChildFund International.html:html},
+keywords = {best charities,best charity,charitable contribution,charitable donation,charitable donations,charitable giving,charities,charity,charity directory,charity rating,charity ratings,charity watchdog,donate money,donating funds,donations,donors,giving money,guide,non profit,non-profit,nonprofit,organization,philanthropic,philanthropy,ratings,tax deduction,tithing,wise giving},
+title = {{Charity Navigator Rating - ChildFund International}},
+url = {http://www.charitynavigator.org/index.cfm?bay=search.summary\&orgid=3499},
+urldate = {02/10/12}
+}
+@article{Lee2007,
+author = {Lee, Yu-kang and Chang, Chun-tuan},
+file = {:Users/timo/Documents/Mendeley Desktop/Lee, Chang/Unknown/Lee, Chang. 2007. WHO GIVES WHAT TO CHARITY CHARACTERISTICS.pdf:pdf},
+keywords = {charitable donations,charity,voluntary work,volunteerism monetary donations},
+number = {9},
+pages = {1173--1180},
+title = {{WHO GIVES WHAT TO CHARITY ? CHARACTERISTICS}},
+volume = {35},
+year = {2007}
+}
