--- a/content/customerAcquisition.tex
+++ b/content/customerAcquisition.tex
@@ -2,32 +2,36 @@
 
 Switching to the next gear - the customer acquisition. Customer acquisition is all about getting new customers to buy your product. The more you talk to potential customers the higher the chance to make a sale. Gear up refers to this as frequency. As a sight effect you acquire more knowledge about your customers which helps you to push your delight.
 
-The three questions that need to be addressed are "what is my target market? Which customers are most likely to buy this product? Where will I find the greates number of solid needs". This is where the first problem arrises judging the proposed concept - we don't have access to this information. 
+The three questions that need to be addressed are "what is my target market? Which customers are most likely to buy this product? Where will I find the greates number of solid leads"\cite{Ramfelt}. This is where the first problem arrises on judging the proposed concept - we don't have access to this information. 
 
-According to their total yearly revenue of  \$228\,243\,355 in 2011  
+According to CFAs total yearly revenue of  \$228\,243\,355 in 2011 \cite{Charity}, CFA must have a big base of donors and they need to be put to use. They can be used for "friction free story telling" as mentioned in the previous chapter. Furthermore their available personal information should be consolidated to get insights on the demographics of the existing users. Who are our current customers? How did we acquire them? After getting those insights, the right delight for the right target needs to be created. With the delight in place "friction free story telling" can be put to work to acquire new customers with the help of the existing once. This is the best that could happen to CFA because it means the customer is selling for you and thereby setting your sales cost to zero.
 
 
-use existing customers to create new leads(friction free story telling)
-no stories used yet
-more personal
-"take away buttons"
-
-state a clear vision
-differentiate from other charities
+All of the new concepts have potential in acquiring customers through the new features proposed. But it may also be a good idea to take a step back and look how CFA is presenting themselves right now. Their website provides a lot of information but in a unstructured and overloaded manor trying to please everybody's needs. CFA states no clear vision on their foundation and they don't separate themselves from other charities. Examples could be "CFA vision is to become the most transparent childrens foundation" or "CFA vision is to become the childrens foundation with the smallest organizational expenses". This statement needs to be underlined with facts and number correlating CFA to other charities Cleaning up the existing feature set and then adding one concept that fits the new vision statement should be a considered way of implementation.
 
 
 
+\section{Customer Acquisition- thoughts on the concepts proposed}
 
-Sponsorship stream 
+Each of the concepts proposed can be seen as a different product in a product portfolio. Each of those products has its unique customers, needs a sales formula, "needs to have a Delight, and show profitability"\cite{Ramfelt}. This section summarizes the discussion in class and provides additional suggestion to each of the concepts below.
 
-- make sure you don'T loose connected customers (ask for email)
+\subsection{Sponsorship stream}
 
-
-send personal message in the name of the creator "axel invites you blala"
-
-customer acquisition through other networks "uplaod video to youtube"
-
-create loyality
-take the sponsors to the place
+The first solution makes an impression of being easily implemented and of low cost. But in the context of customer acquisition each of the local personnel that provides the updates needs to be seen as a sale person. Each one of them hast to put in multiple hours of time each week to provide the suggested update frequency. The acquisition costs might end up being relatively high. If this system is implemented strong analytic tools need to be implemented as well to see how successful the strategy is and if it is worth the sales costs.
 
 
+\subsection{Satellite projects}
+
+The satellite projects, if executed well might be a good driver to create leeds with low sales cost. Those customers might only be one time customers. So if the strategy rather wants to focus on creating a long lasting customer relation further tools needs to be implemented. E.g. making use of the provided email address to delight the customer to join a subscription based model.
+
+\subsection{Sponsor team}
+There are two different groups that need to be targeted in the sponsor team concept. First the teams that are started by an initiative of a single person and second the teams initiated by cooperations. As the Gear Up book states: "people who need the remedy are not necessarily the buyers"\cite{Ramfelt}. It might be a different delight for a cooperation to form a team then for a single person.
+
+\subsection{Active participation}
+
+For the concept of active participation it might be a misconception to make the active participants pay extra. As stated in a study by Lee et al. people that donate money are less likely to volunteer and vis versa\cite{Lee2007}. If this concept works out and creates a positive experience for the volunteers, CFA ends up with advocates for their foundation that have great (friction free) stories to tell about CFA to drive their sales.
+
+
+\section{Customer Acquisition - conclusion}
+
+It seems to become a common theme through all the chapters: The missing insights on the direction of CFA, their current donors and their demographics and whom they want to target with the proposed concepts. This makes it impossible to judge the suitability for the concepts to drive sales. Once those insights are at hand, CFA can make use of the proposed solutions, due to broad setup of them. They can be tailored to fit the selected target group then, without groping in the dark. 
