--- a/content/customerAcquisition.tex
+++ b/content/customerAcquisition.tex
@@ -2,7 +2,7 @@
 
 Switching to the next gear - the customer acquisition. Customer acquisition is all about getting new customers to buy your product. The more you talk to potential customers the higher the chance to make a sale. Gear up refers to this as frequency. As a sight effect you acquire more knowledge about your customers which helps you to push your delight.
 
-The three questions that need to be addressed are "what is my target market? Which customers are most likely to buy this product? Where will I find the greates number of solid leads"\cite{Ramfelt}. This is where the first problem arrises on judging the proposed concept - we don't have access to this information. 
+The three questions that need to be addressed are "what is my target market? Which customers are most likely to buy this product? Where will I find the greatest number of solid leads"\cite{Ramfelt}. This is where the first problem arrises on judging the proposed concept - we don't have access to this information. 
 
 According to CFAs total yearly revenue of  \$228\,243\,355 in 2011 \cite{Charity}, CFA must have a big base of donors and they need to be put to use. They can be used for "friction free story telling" as mentioned in the previous chapter. Furthermore their available personal information should be consolidated to get insights on the demographics of the existing users. Who are our current customers? How did we acquire them? After getting those insights, the right delight for the right target needs to be created. With the delight in place "friction free story telling" can be put to work to acquire new customers with the help of the existing once. This is the best that could happen to CFA because it means the customer is selling for you and thereby setting your sales cost to zero.
 
@@ -17,21 +17,29 @@ Each of the concepts proposed can be seen as a different product in a product po
 
 \subsection{Sponsorship stream}
 
-The first solution makes an impression of being easily implemented and of low cost. But in the context of customer acquisition each of the local personnel that provides the updates needs to be seen as a sale person. Each one of them hast to put in multiple hours of time each week to provide the suggested update frequency. The acquisition costs might end up being relatively high. If this system is implemented strong analytic tools need to be implemented as well to see how successful the strategy is and if it is worth the sales costs.
+The sponsor ship stream is a great opportunity to increase sales frequency for CFA. The current sponsors are acting as sales persons that spread information about CFA for free. The perception of this messages by potential customers will be rather positive since the message is delivered by their friends.
+ 
+In the context of customer acquisition each of the local personnel that provides the updates needs to be seen as a sales person. Each one of them has to put in multiple hours of time each week to provide the suggested update frequency. The acquisition costs might end up being high. To track the success a tool in the lines of Google Analytics needs to be used. This helps CFA to find the right frequency for updates, to track how high the conversation rate is and what content works.
 
 
 \subsection{Satellite projects}
 
-The satellite projects, if executed well might be a good driver to create leeds with low sales cost. Those customers might only be one time customers. So if the strategy rather wants to focus on creating a long lasting customer relation further tools needs to be implemented. E.g. making use of the provided email address to delight the customer to join a subscription based model.
+The satellite projects built upon the sponsorship stream. They provide a stronger incentive to actually share the message over social platforms since the people that are already backing the project want it to reach its goal. The sales frequency will be higher assuming that the incentive to share is higher. One needs to keep in mind though that, those customers might only be one time customers. So if CFAs overall strategy focuses on creating a long lasting customer relation further tools needs to be implemented. E.g. making use of the provided email address to delight the customer to join a subscription based model, or implement a recommendation tool like Amazons "people who bought this also bought this".
 
 \subsection{Sponsor team}
-There are two different groups that need to be targeted in the sponsor team concept. First the teams that are started by an initiative of a single person and second the teams initiated by cooperations. As the Gear Up book states: "people who need the remedy are not necessarily the buyers"\cite{Ramfelt}. It might be a different delight for a cooperation to form a team then for a single person.
+There are two different groups that need to be targeted in the sponsor team concept. First the teams that are started by an initiative of a single person and second the teams initiated by cooperations. As the Gear Up book states: "people who need the remedy are not necessarily the buyers"\cite{Ramfelt}. It might be a different delight for a cooperation to form a team then for a single person. Either way the sponsor team is another good way for CFA to acquire new customers. The sales frequency might not be increased but the conversation rate will be much higher do to the social aspects of this concept.
 
 \subsection{Active participation}
 
-For the concept of active participation it might be a misconception to make the active participants pay extra. As stated in a study by Lee et al. people that donate money are less likely to volunteer and vis versa\cite{Lee2007}. If this concept works out and creates a positive experience for the volunteers, CFA ends up with advocates for their foundation that have great (friction free) stories to tell about CFA to drive their sales.
+For the concept of active participation it is a misconception to make the active participants pay extra. As stated in a study by Lee et al. people that donate money are less likely to volunteer and vis versa\cite{Lee2007}. 
+
+If this concept works out and creates a positive experience for the volunteers, CFA ends up with advocates for their foundation that have great (friction free) stories to tell about CFA to drive their sales. This concept ties well into the sponsorship stream since the messages by those advocates can be plugged into the social news stream and inspire future volunteers. This concept won't drive customer acquisition by itself, but will provide content to drive sales in the other concepts.
 
 
 \section{Customer Acquisition - conclusion}
 
-It seems to become a common theme through all the chapters: The missing insights on the direction of CFA, their current donors and their demographics and whom they want to target with the proposed concepts. This makes it impossible to judge the suitability for the concepts to drive sales. Once those insights are at hand, CFA can make use of the proposed solutions, due to broad setup of them. They can be tailored to fit the selected target group then, without groping in the dark. 
+It seems to become a common theme through all the chapters: The missing insights on the direction of CFA, their current donors and their demographics and whom they want to target with the proposed concepts. This makes it impossible to judge in detail the suitability for the concepts to drive sales. 
+
+IF CFA is able to provide those insights the concepts can be further refined to increase sales. Besides that customer acquisition is by no way a static process. The sales formula has to be continuously refined to adapt it to changes and maximize the ration between sales and frequency. To be able to this all of the concepts need to be monitored to check for their effectivity. Since they are all web based Google Analytics should be the tool of choice.
+
+Overall one can see that those concept are implementing the customer acquisition gear well. They increase the sales frequency massively, they will increase the conversation rate and they will help CFA to continuously shape their delight. And the best, they all thrive to create a zero in the budget for CFAs customer acquisition.
